26.2 upgrade